Resolvido bug no gerarRelatorioPedido